<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1C1A29">

        <ImageView
            android:id="@+id/iv_logo_home"
            android:layout_width="@dimen/with_iv_home"
            android:layout_height="@dimen/height_iv_home"
            android:layout_marginTop="@dimen/verticalMarginSmall"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_home">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_onDisplay"
                    style="@style/TittleHomeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_onDisplay" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyOnDisplay"
                    style="@style/StyleRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                <TextView
                    android:id="@+id/tv_coming"
                    style="@style/TittleHomeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_coming" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyComing"
                    style="@style/StyleRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                <TextView
                    android:id="@+id/tv_more_popular"
                    style="@style/TittleHomeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_morePopular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyMorePopular"
                    style="@style/StyleRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                <TextView
                    android:id="@+id/tv_best_movies"
                    style="@style/TittleHomeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_best_movies" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyBestMovies"
                    style="@style/StyleRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>