<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_home"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_background_details" />

        <ImageView
            android:id="@+id/ib_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_details"
            android:layout_marginTop="@dimen/margin_top_ic_details"
            android:src="@drawable/ic_back_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tittle_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_details"
            android:layout_marginTop="@dimen/verticalMarginLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/text_details_size"
            app:layout_constraintEnd_toStartOf="@id/iv_principal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_back" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalMarginSmall"
            android:textColor="@color/white"
            android:textSize="@dimen/textMedium"
            app:layout_constraintEnd_toStartOf="@id/iv_principal"
            app:layout_constraintStart_toStartOf="@id/tv_tittle_details"
            app:layout_constraintTop_toBottomOf="@id/tv_tittle_details" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalMarginSmall"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@id/tv_tittle_details"
            app:layout_constraintTop_toBottomOf="@id/tv_duration" />

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontalMarginSmall"
            android:layout_marginTop="@dimen/verticalMarginSmall"
            android:textColor="@color/color_silver"
            android:textSize="@dimen/textMedium"
            app:layout_constraintStart_toEndOf="@id/iv_star"
            app:layout_constraintTop_toBottomOf="@id/tv_duration" />

        <androidx.cardview.widget.CardView
            android:id="@+id/iv_principal"
            android:layout_width="@dimen/width_card_item_list"
            android:layout_height="@dimen/height_card_item_list"
            android:layout_marginEnd="@dimen/horizontalMarginSmall"
            app:cardCornerRadius="@dimen/corner_radius_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_tittle_details"
            app:layout_constraintTop_toTopOf="@id/tv_tittle_details">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@color/background_color_default"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_sinopse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginTop="@dimen/horizontalMarginSmall"
            android:text="@string/label_sinopse"
            android:textColor="@color/white"
            android:textSize="@dimen/textMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivHome" />

        <TextView
            android:id="@+id/tv_typografy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginTop="@dimen/verticalMarginSmall"
            android:layout_marginEnd="@dimen/horizontalMarginSmall"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="@dimen/textSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sinopse" />

        <TextView
            android:id="@+id/tv_comentarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontalMargin"
            android:layout_marginTop="@dimen/verticalMargin"
            android:text="@string/label_coment_rios"
            android:textColor="@color/white"
            android:textSize="@dimen/text_details_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_typografy" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_comment"
            android:layout_width="@dimen/width_card_comment"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalMarginSmall"
            android:layout_marginEnd="@dimen/horizontalMarginSmall"
            android:backgroundTint="@color/background_color_default"
            app:cardCornerRadius="@dimen/corner_radius_dp"
            app:layout_constraintStart_toStartOf="@id/tv_comentarios"
            app:layout_constraintTop_toBottomOf="@id/tv_comentarios">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_comment_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_card_coment_details" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/verticalMargin"
            android:layout_marginTop="@dimen/horizontalMargin"
            android:text="@string/label_more"
            android:textColor="@color/white"
            android:textSize="@dimen/text_details_size"
            app:layout_constraintStart_toStartOf="@id/card_comment"
            app:layout_constraintTop_toBottomOf="@id/card_comment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyOnDisplay"
            style="@style/StyleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_more" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>